--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,15 @@
 					</excludes>
 				</configuration>
 			</plugin>
+            			<!-- maven-war-plugin 추가 -->
+           				<plugin>
+                			<groupId>org.apache.maven.plugins</groupId>
+                			<artifactId>maven-war-plugin</artifactId>
+                			<version>3.3.1</version>
+                			<configuration>
+                    			<!-- WAR 파일 구성 및 설정 -->
+                			</configuration>
+            		</plugin>
 		</plugins>
 	</build>
 
